orgly/.ghc-errors.txt

<interactive>:1:1: error: Variable not in scope: q

/home/jakob/projects/orgly/orgly/app/Main.hs:4:1: error:
    Could not find module ‘Data.OrgMode.Parse’
    Use -v to see a list of the files searched for.
  |
4 | import Data.OrgMode.Parse
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
orgly-0.1.0.0: configure (lib + exe)
Configuring orgly-0.1.0.0...
orgly-0.1.0.0: initial-build-steps (lib + exe)
The following GHC options are incompatible with GHCi and have not been passed to it: -threaded
Configuring GHCi with the following packages: orgly
Using main module: 1. Package `orgly' component exe:orgly-exe with main-is file: /home/jakob/projects/orgly/orgly/app/Main.hs

/home/jakob/projects/orgly/orgly/app/Main.hs:4:1: error:
    Could not find module ‘Data.OrgMode.Parse’
    Use -v to see a list of the files searched for.
  |
4 | import Data.OrgMode.Parse
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
